<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.wmsl</groupId>
	<artifactId>GenDataDB</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>GenDataDB Maven Webapp</name>

	<properties>
		<spring.version>3.2.12.RELEASE</spring.version>
		<jdk.version>1.8</jdk.version>
		<!-- <spring.version>4.1.6.RELEASE</spring.version> -->
		<logback.version>0.9.29</logback.version>
		<jcl.slf4j.version>1.6.0</jcl.slf4j.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>net.kemitix</groupId>
			<artifactId>sqlite-dialect</artifactId>
			<version>0.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-commons-annotations</artifactId>
			<version>3.2.0.Final</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.hibernate</groupId> -->
		<!-- <artifactId>hibernate-commons-annotations</artifactId> -->
		<!-- <version>3.3.0.ga</version> -->
		<!-- </dependency> -->

		<!-- <dependency> -->
		<!-- <groupId>org.hibernate</groupId> -->
		<!-- <artifactId>hibernate-annotations</artifactId> -->
		<!-- <version>3.4.0.GA</version> -->
		<!-- </dependency> -->


		<dependency>
			<groupId>com.wealth.bwm</groupId>
			<artifactId>bwm-persistence</artifactId>
			<version>0.0.1-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.12.0.GA</version>
		</dependency>


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>javax.transaction</groupId> -->
		<!-- <artifactId>transaction-api</artifactId> -->
		<!-- <version>1.1-rev-1</version> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.hibernate</groupId> -->
		<!-- <artifactId>hibernate-annotations</artifactId> -->
		<!-- <version>3.4.0.GA</version> -->
		<!-- <type>jar</type> -->
		<!-- <scope>compile</scope> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>3.1.0.GA</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>3.4.0.GA</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>


		<!-- Spring AOP dependency -->
		<!-- <dependency> -->
		<!-- <groupId>cglib</groupId> -->
		<!-- <artifactId>cglib</artifactId> -->
		<!-- <version>${spring.version}</version> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib-nodep</artifactId>
			<version>2.2</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>log4j</groupId> -->
		<!-- <artifactId>log4j</artifactId> -->
		<!-- <version>1.2.17</version> -->
		<!-- </dependency> -->


		<!-- 2. Bridge logging from JCL to SLF4j -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${jcl.slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${jcl.slf4j.version}</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.slf4j</groupId> -->
		<!-- <artifactId>slf4j-log4j12</artifactId> -->
		<!-- <version>${jcl.slf4j.version}</version> -->
		<!-- </dependency> -->

		<!-- 3. logback -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>


		<!-- MySQL database driver -->
		<!-- <dependency> -->
		<!-- <groupId>mysql</groupId> -->
		<!-- <artifactId>mysql-connector-java</artifactId> -->
		<!-- <version>5.1.9</version> -->
		<!-- </dependency> -->


		<!-- DB2 database driver -->
		<dependency>
			<groupId>com.ibm.db2</groupId>
			<artifactId>db2jcc_license_cu</artifactId>
			<version>10.5</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.ibm.db2</groupId>
			<artifactId>db2jcc</artifactId>
			<version>10.5</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>



		<!-- Hibernate framework -->
		<dependency>
			<groupId>hibernate</groupId>
			<artifactId>hibernate3</artifactId>
			<version>3.2.3.GA</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.hibernate</groupId> -->
		<!-- <artifactId>hibernate-core</artifactId> -->
		<!-- <version>4.1.2.Final</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.hibernate</groupId> -->
		<!-- <artifactId>hibernate-core</artifactId> -->
		<!-- <version>3.3.1.GA</version> -->
		<!-- </dependency> -->



		<!-- Hibernate library dependecy start -->
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>1.6.1</version>
		</dependency>

		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>

		<dependency>
			<groupId>antlr</groupId>
			<artifactId>antlr</artifactId>
			<version>2.7.7</version>
		</dependency>
		<!-- Hibernate library dependecy end -->

	</dependencies>

	<!-- <distributionManagement> <repository> <id>deployment</id> <name>Nexus 
		Releases Managed Repository</name> <url>http://javarep:8081/nexus/content/repositories/releases</url> 
		</repository> use the following if you ARE using a snapshot version. <snapshotRepository> 
		<id>deployment</id> <name>Nexus Snapshots Managed Repository</name> <url>http://javarep:8081/nexus/content/repositories/snapshots</url> 
		</snapshotRepository> </distributionManagement> -->


	<build>
		<finalName>GenDataDB</finalName>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<argLine>-Xms128m -Xmx512m -XX:MaxPermSize=512m</argLine>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>

				<!-- <plugin> -->
				<!-- <groupId>org.apache.maven.plugins</groupId> -->
				<!-- <artifactId>maven-surefire-plugin</artifactId> -->
				<!-- <version>2.17</version> -->
				<!-- <configuration> -->
				<!-- <forkMode>once</forkMode> -->
				<!-- <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=512m</argLine> -->
				<!-- </configuration> -->
				<!-- </plugin> -->

				<!-- <plugin> -->
				<!-- <groupId>org.apache.maven.plugins</groupId> -->
				<!-- <artifactId>maven-scm-plugin</artifactId> -->
				<!-- <version>1.6</version> -->
				<!-- <configuration> -->
				<!-- <connectionType>developerConnection</connectionType> -->
				<!-- </configuration> -->
				<!-- </plugin> -->

				<!-- <plugin> -->
				<!-- <groupId>org.apache.maven.plugins</groupId> -->
				<!-- <artifactId>maven-site-plugin</artifactId> -->
				<!-- <version>3.4</version> -->
				<!-- </plugin> -->

			</plugins>

		</pluginManagement>

		<plugins>
			<!-- <plugin> -->
			<!-- <groupId>org.apache.maven.plugins</groupId> -->
			<!-- <artifactId>maven-shade-plugin</artifactId> -->
			<!-- <version>2.1</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <phase>package</phase> -->
			<!-- <goals> -->
			<!-- <goal>shade</goal> -->
			<!-- </goals> -->
			<!-- <configuration> -->
			<!-- <transformers> -->
			<!-- <transformer -->
			<!-- implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> -->
			<!-- <mainClass>com.wmsl.App</mainClass> -->
			<!-- </transformer> -->
			<!-- <transformer -->
			<!-- implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
			<!-- <resource>META-INF/spring.handlers</resource> -->
			<!-- </transformer> -->
			<!-- <transformer -->
			<!-- implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
			<!-- <resource>META-INF/spring.schemas</resource> -->
			<!-- </transformer> -->
			<!-- </transformers> -->
			<!-- </configuration> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>com.wmsl.App</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>package-jar-with-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- <plugin> -->
			<!-- <groupId>org.apache.maven.plugins</groupId> -->
			<!-- <artifactId>maven-jar-plugin</artifactId> -->
			<!-- <version>2.3.1</version> -->
			<!-- <configuration> -->
			<!-- <archive> -->
			<!-- <index>true</index> -->
			<!-- <manifest> -->
			<!-- <addClasspath>true</addClasspath> -->
			<!-- <mainClass>com.wmsl.App</mainClass> -->
			<!-- </manifest> -->
			<!-- </archive> -->
			<!-- </configuration> -->
			<!-- </plugin> -->

		</plugins>

	</build>
</project>
